--- a/.gitignore
+++ b/.gitignore
@@ -15,9 +15,10 @@
 /tmp
 
  # Ignore other unneeded files.
- doc/
- *.swp
- *~
- .project
- .DS_Store
- /.idea/
+doc/
+*.swp
+*~
+.project
+.DS_Store
+/.idea
+
